fixed spacing issue with menu option

--- a/src/style/start.css
+++ b/src/style/start.css
@@ -169,3 +169,9 @@
   border-bottom: white 2px solid;
   margin-left: 2.5%;
 }
+
+.right-align {
+  justify-content: flex-end;
+  text-align: start;
+  width: 100%;
+}
